[package]
name = "qr-note"
version = "0.1.0"
authors = ["Fabien Marteau <mail@fabienm.eu>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
image = "0.23"
qrcode = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

[build-dependencies]
slint-build = "1.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
